Se agregó margen top al botón de contacto.

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ main button{
   cursor: pointer;
   transition: .4s;
   box-shadow: var(--sombrita);
+  margin-top: var(--marginTop);
 }
 main button:hover{
   background-color: var(--lightpurple);
