--- a/style.css
+++ b/style.css
@@ -23,11 +23,6 @@
 
 body, 
 html{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
   scroll-behavior: smooth;
 }
 
@@ -51,11 +46,14 @@ header{
 nav{
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: var(--verdiazul);
   padding: 10px;
+  margin: 0 auto;
   margin-top: 10px;
   border-radius: 25px;
   box-shadow: var(--sombrita);
+  max-width: 900px;
 }
 
 nav a{
@@ -89,6 +87,7 @@ nav a:hover:after{
 }
 
 main{
+  margin: 0 auto;
   margin-top: var(--marginTop);
   display: flex;
   justify-content: center;
@@ -270,8 +269,8 @@ footer h3{
 
 .info-container{
   display: flex;
-  width: 30%;
-  padding: var(--btnPadding);
+  width: 50%;
+  padding: 25px;
   margin-top: var(--marginTop);
   position: relative;
   align-items: center;
@@ -317,11 +316,11 @@ footer h3{
   }
 }
 
-
-.wave-footer{
-  position: absolute;
-  width: 100%;
-  top: 0;
+.repo{
+  color: #fff;
+  margin-top: 15px;
+  font-size:1rem;
+  text-decoration: underline;
 }
 
 .up{
@@ -342,4 +341,129 @@ footer h3{
 
 .up img{
   width: 100%;
+}
+
+/* RESPONSIVE MENUS */
+#menu{
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 100%;
+  right: 1%;
+  display: none;
+}
+
+#checkbox{
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 18%;
+  right: 1%;
+  appearance: none;
+}
+
+
+/* media queries */
+
+@media screen and (max-width:893px){
+  :root{
+    --paddingSection: 30px;
+    --sectionTitle: 25px;
+    --btnPadding: 7px 14px;
+  }
+  *{
+    font-size: 15px;
+  }
+
+  body{
+    display: static;
+  }
+
+  .wave {
+    display: none;
+  }
+  header{
+    height: auto;
+  }
+  h1{
+    font-size: 100%;
+    margin: 0 auto;
+  }
+  
+  main{
+    width: 90%;
+  }
+  main img{
+    width: 70%;
+  }
+
+  video{
+    width: 90%;
+  }
+
+  .info-container{
+    width: 90%;
+  }
+
+  #horario th, 
+  td{
+    border: 1px solid;
+    padding: var(--btnPadding);
+    font-size: 1rem;
+  }
+
+  #menu{
+    display: block;
+  }
+  label{
+    display: block;
+    position: absolute;
+    left: -450%;
+    right: 12%;
+    top: 15.3%;
+  }
+  
+  #checkbox:checked + label{
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 12%;
+    top: 15.3%;
+    transition: left .5s;
+  }
+  nav{
+    display: flex;
+    flex-direction: column;
+    border-radius: 0;
+    gap: 15px;
+    padding: 25px 0;
+  }
+}
+
+@media screen and (max-width:550px){
+
+  #juego{
+    width: 95%;
+    margin: 0 auto;
+  }
+  iframe{
+    width: 100%;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width:444px){
+  #checkbox{
+    top: 24%;
+  }
+  #checkbox:checked + label{
+    top: 21.6%;
+  }
+}
+
+@media screen and (max-width:400px){
+  iframe{
+    width: 100%;
+    height: 200px;
+  }
 }
