--- a/style.css
+++ b/style.css
@@ -254,7 +254,6 @@ footer{
   display: flex;
   position: relative;
   width: 100%;
-  height: 300px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -317,7 +316,7 @@ footer h3{
 }
 
 .repo{
-  color: #fff;
+  color: #000;
   margin-top: 15px;
   font-size:1rem;
   text-decoration: underline;
